--- a/style.css
+++ b/style.css
@@ -16,9 +16,47 @@ color: #FF136F;
 .bay-now-button{
 background-image: linear-gradient(to bottom, #ff589B 0%, #ff136f 100%);
     border: none;
-    border-radius: 8px;
+    border-radius: 5px;
 
     color: #fff;
     padding:9xp 25px;
     cursor: pointer;
+}
+.categories h1{
+    color:white;
+}
+.categories img{
+    width: 100px;
+}
+.cat1,.cat2,.cat3{
+    background-image: linear-gradient(60deg,orange,rgb(212, 212, 56));
+    padding: 10px 30px;
+    border-radius: 8px;
+}
+.cat2{
+    background-image: linear-gradient(60deg,rgb(236, 19, 56),rgb(170, 70, 85));
+}
+.cat3{
+    background-image: linear-gradient(60deg,rgb(56, 17, 230),rgb(88, 68, 173));
+}
+.card{
+    border: none;
+    border-radius: 10px;
+    box-shadow: 5px 5px 15px rgb(77, 66, 68);
+}
+.card-footer{
+    background-color: white;
+    border-top: none;
+}
+#Contact-us{
+
+    
+    height: 300px;
+}
+#Contact-us h5{
+     color: gray;
+}
+ 
+footer{
+    text-align: center;
 }
